Bug 1582363 - Consume the synthesized mouse move events when dragging the caret. r=mats

That is, we consume the synthesized mouse move events without doing
anything in PressCaretState and DragCaretState.

Differential Revision: https://phabricator.services.mozilla.com/D52113