layout/base/AccessibleCaretEventHub.h
@@ -8,6 +8,7 @@
 #define mozilla_AccessibleCaretEventHub_h
 
 #include "mozilla/EventForwards.h"
+#include "mozilla/MouseEvents.h"
 #include "mozilla/UniquePtr.h"
 #include "mozilla/WeakPtr.h"
 #include "nsCOMPtr.h"
@@ -198,7 +199,8 @@ class AccessibleCaretEventHub::State {
 
   MOZ_CAN_RUN_SCRIPT
   virtual nsEventStatus OnMove(AccessibleCaretEventHub* aContext,
-                               const nsPoint& aPoint) {
+                               const nsPoint& aPoint,
+                               WidgetMouseEvent::Reason aReason) {
     return nsEventStatus_eIgnore;
   }
 
